--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "typescript": "~4.5.2"
   },
   "dependencies": {
+    "@alpacahq/alpaca-trade-api": "^2.12.1",
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
