--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@nrwl/nx-cloud": "latest",
     "@nrwl/tao": "13.8.8",
     "@nrwl/workspace": "13.8.8",
+    "@types/cron": "^1.7.3",
     "@types/jest": "27.0.2",
     "@types/node": "16.11.7",
     "@typescript-eslint/eslint-plugin": "~5.10.0",
@@ -37,7 +38,8 @@
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
-    "googleapis": "^97.0.0",
+    "@nestjs/schedule": "^1.1.0",
+    "googleapis": "^39.2.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.0.0",
     "tslib": "^2.0.0"
