--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/schedule": "^1.1.0",
+    "@types/mail-notifier": "^0.5.0",
+    "mail-notifier": "^0.5.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.0.0",
     "tslib": "^2.0.0"
